--- a/TrueColorConsole/TrueColorConsole.csproj
+++ b/TrueColorConsole/TrueColorConsole.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>TrueColorConsole</PackageId>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Authors>Aybe</Authors>
+    <Description>24-bit color console for .NET !</Description>
+    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <Copyright>Copyright 2017 (c) Aybe</Copyright>
+    <PackageTags>console virtual terminal 24-bit true color RGB .NET VT100</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
