--- a/TrueColorConsole/TrueColorConsole.csproj
+++ b/TrueColorConsole/TrueColorConsole.csproj
@@ -10,6 +10,7 @@
     <Copyright>Copyright 2017 (c) Aybe</Copyright>
     <PackageTags>console virtual terminal 24-bit true color RGB .NET VT100</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageIconUrl>https://github.com/aybe/TrueColorConsole/raw/master/icon.png</PackageIconUrl>
   </PropertyGroup>
 
   <ItemGroup>
